Fix the brand text align problem

--- a/style.css
+++ b/style.css
@@ -192,21 +192,26 @@ p {
     box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
 }
 
+.navbar-brand {
+    float: left;
+}
+
 .navbar-brand img {
     margin-right: 0;
     float: left;
 }
 
-.brand-text{
+.brand-text {
     position: relative;
-    left: 0;
-    width: 130px;
+    float: right;
+    width: 110px;
+    margin-left: 12px;
     margin-right: 64px;
     color: var(--dark);
     font-family: var(--ff-primary);
     font-weight: 500;
     font-size: 14.5px;
-    line-height: 100.21%;
+    line-height: 100%;
     letter-spacing: -0.01em;
 }
 
